--- a/la-patisserie/public/index.html
+++ b/la-patisserie/public/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="border-grey">
         <div class="header__logo">
-          <img src="../src/web/icons/lepatisserie-icon.svg" alt="Logo">
+          <img src="https://i.ibb.co/5BzbsdR/Le-Partisserie.png" alt="Logo">
         </div>
         <div>
             <ul class="header__menu">
@@ -20,7 +20,7 @@
         </div>
         <div class="header__user">
             <div class="header__user-obj">
-                <a class="" href=""><img src="./../web/icons/carrinho.svg" alt=""></a>
+                <a class="" href=""><img src="https://i.ibb.co/k2YH5Xy/Vector-1.png" alt=""></a>
             </div>
         </div>
     </header>
@@ -31,7 +31,7 @@
         <div class="flex">
             <div class="flex-3">
                 <picture>
-                    <img src="../web/images/banner-home.svg" alt="">
+                    <img src="https://i.ibb.co/Yps25v0/image-1.png" alt="">
                 </picture>
             </div>
             <div class="bg-[#FFF1D3] flex-1 rounded-r-[16px] justify-center items-center text-center flex flex-col gap-8">
@@ -52,7 +52,7 @@
             <div id="categoria_1">
                 <a href="#">
                     <div class="flex flex-col items-center gap-3">
-                        <img src="./../web/images/categoria-1.svg" alt="">
+                        <img src="https://i.ibb.co/d06YkWT/image-2.png" alt="">
                         <p>Chocolateria</p>
                     </div>
                 </a>
@@ -60,7 +60,7 @@
             <div id="categoria_2">
                 <a href="#">
                     <div class="flex flex-col items-center gap-3">
-                        <img src="./../web/images/categoria-2.svg" alt="">
+                        <img src="https://i.ibb.co/MSRJ23r/image-3.png" alt="">
                         <p>Tortas</p>
                     </div>
                 </a>
@@ -68,7 +68,7 @@
             <div id="categoria_3">
                 <a href="#">
                     <div class="flex flex-col items-center gap-3">
-                        <img src="./../web/images/categoria-3.svg" alt="">
+                        <img src="https://i.ibb.co/G3ScR9T/image-4-1.png" alt="">
                         <p>Bolos</p>
                     </div>
                 </a>
@@ -81,7 +81,7 @@
         <div class="flex flex-row gap-20">
             <div id="produto-torta" class="max-w-[345px]">
                 <div class="relative">
-                    <img src="./../web/images/produto-torta.png" alt="">
+                    <img src="https://i.ibb.co/WgYzpvJ/image-7.png" alt="">
                     <span class="absolute top-2 right-4 bg-[#FFD5D5] px-1 rounded text-[#FF6B97]" style="border: 1px solid #FF9EBB">Tortas</span>
                 </div>
                 <div class="flex flex-row pt-2 justify-between">
@@ -95,7 +95,7 @@
             </div>
             <div id="produto-chocolate" class="max-w-[345px]">
                 <div class="relative">
-                    <img src="./../web/images/produto-chocolate.png" alt="">
+                    <img src="https://i.ibb.co/hsjbLtw/image-6.png" alt="">
                     <span class="absolute top-2 right-4 bg-[#D5FFE1] px-1 rounded text-[#28E544]" style="border: 1px solid #28E544">Chocolateria</span>
                 </div>
                 <div class="flex flex-row pt-2 justify-between">
@@ -109,7 +109,7 @@
             </div>
             <div id="produto-bolo" class="max-w-[345px]">
                 <div class="relative">
-                    <img src="./../web/images/produto-bolo.png" alt="">
+                    <img src="https://i.ibb.co/G2rpYD8/image-8-1.png" alt="">
                     <span class="absolute top-2 right-4 bg-[#FDFFD5] px-1 rounded text-[#E1D600]" style="border: 1px solid #E1D600">Bolos</span>
                 </div>
                 <div class="flex flex-row pt-2 justify-between">
